added auth controller
