# src/apis/users/controller.ts
@@ -5,19 +5,19 @@ import { ErrorService, NotFoundError, UnprocessableEntityError } from '../../exc
 import { UserRepository } from '../../repositories'
 import { comparePassword } from '../../utils/hash'
 import {
-	ChangeEmail,
+	ChangeEmailRequest,
 	ChangePassword,
-	EditProfile,
+	EditProfileRequest,
 	GetAllResponse,
 	GetResponse,
-	RegisterUser,
+	RegisterUserRequest,
 	SearchRequest,
 	UserDTO
 } from './models'
 
 
 @Route('users')
-export default class UserController {
+export class UserController {
 	@Get('/')
 	async getAll(): Promise<GetAllResponse> {
 		const result = await UserRepository.getAll()
@@ -53,9 +53,9 @@ export default class UserController {
 	@Post('/register')
 	@SuccessResponse(StatusCodes.CREATED, 'Created')
 	@Response<UnprocessableEntityError>(StatusCodes.UNPROCESSABLE_ENTITY)
-	async register(@Body() body: RegisterUser): Promise<void> {
+	async register(@Body() body: RegisterUserRequest): Promise<void> {
 		// TODO: move to middleware
-		const { email, password } = RegisterUser.fromBody(body)
+		const { email, password } = RegisterUserRequest.fromBody(body)
 		const user = await UserRepository.getByEmail(email)
 
 		this.validateEmailNotTaken(email, user)
@@ -97,10 +97,10 @@ export default class UserController {
 	@Response<UnprocessableEntityError>(StatusCodes.UNPROCESSABLE_ENTITY)
 	async changeEmail(
 		@Path() entityId: string,
-		@Body() body: ChangeEmail
+		@Body() body: ChangeEmailRequest
 	): Promise<void> {
 		// TODO: move to middleware
-		const { newEmail } = ChangeEmail.fromBody(body)
+		const { newEmail } = ChangeEmailRequest.fromBody(body)
 		const user = await UserRepository.getById(entityId)
 
 		this.validateUserExist(user)
@@ -121,10 +121,10 @@ export default class UserController {
 	@Response<UnprocessableEntityError>(StatusCodes.UNPROCESSABLE_ENTITY)
 	async editProfile(
 		@Path() entityId: string,
-		@Body() body: EditProfile
+		@Body() body: EditProfileRequest
 	): Promise<void> {
 		// TODO: move to middleware
-		const profile = EditProfile.fromBody(body)
+		const profile = EditProfileRequest.fromBody(body)
 		const user = await UserRepository.getById(entityId)
 		const currentProfile = user?.profile || {}
 
